Mudando para Flask.

--- a/templates/api.html
+++ b/templates/api.html
@@ -9,14 +9,14 @@
 		<title>Guilherme - API</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}">
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/minha_foto.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="../stat../static/images/minha_foto.jpg" alt="" /></a>
 				</div>
 			</header>
 
@@ -44,8 +44,8 @@
 
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
-									<div class="col-12"><span class="image fit"><img src="../images/api/imagem1.png" alt="" /></span></div><br>
-									<div class="col-12"><span class="image fit"><img src="../images/api/imagem2.png" alt="" /></span></div>
+									<div class="col-12"><span class="image fit"><img src="../static/images/api/imagem1.png" alt="" /></span></div><br>
+									<div class="col-12"><span class="image fit"><img src="../static/images/api/imagem2.png" alt="" /></span></div>
 								</div>
 							</div>
 
