--- a/templates/cnpq_projeto.html
+++ b/templates/cnpq_projeto.html
@@ -9,7 +9,7 @@
 		<title>Guilherme - CNPq</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 	</head>
 	<body class="is-preload">
 
@@ -38,10 +38,10 @@
 
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
-									<div class="col-12"><span class="image fit"><img src="../images/cnpq_projeto/imagem1.png" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="../images/cnpq_projeto/imagem2.png" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="../images/cnpq_projeto/imagem3.png" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="../images/cnpq_projeto/imagem4.png" alt="" height="230" /></span></div>
+									<div class="col-12"><span class="image fit"><img src="../static/images/cnpq_projeto/imagem1.png" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="../static/images/cnpq_projeto/imagem2.png" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="../static/images/cnpq_projeto/imagem3.png" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="../static/images/cnpq_projeto/imagem4.png" alt="" height="230" /></span></div>
 								</div>
 							</div>
 
