--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -9,7 +9,7 @@
 		<title>Guilherme - Sobre</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 	</head>
 	<body class="is-preload">
 
@@ -30,7 +30,7 @@
 						</header>
 
 						<center>
-							<img src="../images/Eu.png" width="150" height="150">
+							<img src="../static/images/Eu.png" width="150" height="150">
 						</center>
 
 						<p>Olá,<br>
@@ -46,42 +46,42 @@
 									<label>ÁREA: Internet das Coisas<br>
 									Conect dispositivos IoT à nuvem AWS - Alura.</label>
 									<span class="image fit">
-											<img src="../images/cursos/iot.png" alt="" />
+											<img src="../static/images/cursos/iot.png" alt="" />
 									</span>
 								</div>
 								<div class="col-4">
 									<label>ÁREA: CN e IA<br>
 									Computação em Nuvem e Inteligência Artificial - FAT e Microsoft.</label>
 									<span class="image fit">
-											<img src="../images/cursos/nuvem.png" alt="" />
+											<img src="../static/images/cursos/nuvem.png" alt="" />
 									</span>
 								</div>
 								<div class="col-4">
 									<label>ÁREA: Inteligência Artificial<br>
 									Certificação de Inteligência Artificial Microsoft AI-900 - Microsoft.</label>
 									<span class="image fit">
-											<img src="../images/cursos/ia.jpg" alt="" />
+											<img src="../static/images/cursos/ia.jpg" alt="" />
 									</span>
 								</div>
 								<div class="col-4">
 									<label>ÁREA: Segurança da Informação<br>
 									Introdução à Cibersegurança - FAT e Cisco.</label>
 									<span class="image fit">
-											<img src="../images/cursos/seguranca.jpg" alt="" />
+											<img src="../static/images/cursos/seguranca.jpg" alt="" />
 									</span>
 								</div>
 								<div class="col-4">
 									<br><label>ÁREA: Segurança da Informação<br>
 									CyberOps Associate - FAT e Cisco.</label>
 									<span class="image fit">
-											<img src="../images/cursos/seguranca.jpg" alt="" />
+											<img src="../static/images/cursos/seguranca.jpg" alt="" />
 									</span>
 								</div>
 								<div class="col-4">
 									<label>ÁREA: Engenharia de Software<br>
 									Scrum Foundation Professional Certificate - CertProf.</label>
 									<span class="image fit">
-											<img src="../images/cursos/scrum.png" alt="" />
+											<img src="../static/images/cursos/scrum.png" alt="" />
 									</span>
 								</div>
 							</div>
@@ -97,14 +97,14 @@
 									<label>INSTITUIÇÃO: Fatec Cruzeiro.<br>
 									Faculdade de Tecnologia do Estado de São Paulo - Cruzeiro.</label>
 									<span class="image fit">
-											<img src="../images/cursos/fatec.jpg" alt="" />
+											<img src="../static/images/cursos/fatec.jpg" alt="" />
 									</span>
 								</div>
 								<div class="col-4">
 									<label>INSTITUIÇÃO: Etec Cruzeiro.<br>
 									Escola Técnica Estadual do Estado de São Paulo - Cruzeiro.</label>
 									<span class="image fit">
-											<img src="../images/cursos/etec.jpg" alt="" />
+											<img src="../static/images/cursos/etec.jpg" alt="" />
 									</span>
 								</div>
 							</div>
@@ -119,7 +119,7 @@
 									<label>Duração: 1 ano.<br>
 									Conselho Nacional de Desenvolvimento Científico e Tecnológico.</label>
 									<span class="image fit">
-											<img src="../images/cursos/cnpq.jpg" alt="" />
+											<img src="../static/images/cursos/cnpq.jpg" alt="" />
 									</span>
 								</div>
 							</div>
