--- a/templates/tg.html
+++ b/templates/tg.html
@@ -9,7 +9,7 @@
 		<title>Guilherme - TG</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
 	</head>
 	<body class="is-preload">
 
@@ -38,8 +38,8 @@
 
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
-									<div class="col-12"><span class="image fit"><img src="../images/cnpq_projeto/imagem1.png" alt="" /></span></div>
-									<div class="col-12"><span class="image fit"><img src="../images/tg/imagem1.png" alt="" /></span></div>
+									<div class="col-12"><span class="image fit"><img src="../static/images/cnpq_projeto/imagem1.png" alt="" /></span></div>
+									<div class="col-12"><span class="image fit"><img src="../static/images/tg/imagem1.png" alt="" /></span></div>
 								</div>
 							</div>
 
