Corrigindo erros de digitacao.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="../static/images/minha_foto.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="../static/images/Eu.png" alt="" /></a>
 				</div>
 			</header>
 
@@ -60,7 +60,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/Rotas.png" class="image fit thumb"><img src="../static/images/Rotas.png" alt="" /></a>
 								<h3>Rotas Cidades</h3>
-								<p>Métodos de Inteligência Artificialpara encontrar a melhor rota entre uma cidade a outra tendo obrigatoriamente que passar por uma cidade X.</p>
+								<p>Métodos de Inteligência Artificial para encontrar a melhor rota entre uma cidade a outra tendo obrigatoriamente que passar por uma cidade X.</p>
 								<a href="../templates/ia_rotas_cidades.html" class="icon">Saber mais</a>
 							</article>
 						</div>
@@ -80,7 +80,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/dc_monit.png" class="image fit thumb"><img src="../static/images/dc_monit.png" alt="" /></a>
 								<h3>Trabalho de Graduação (em desenvolvimento)</h3>
-								<p>O projeto de TG é baseado nas pesquisas doprojeto desenvolvido ao CNPq e inclui o desenvolvimento em Computação em Nuvem para monitoramento remoto.</p>
+								<p>O projeto de TG é baseado nas pesquisas do projeto desenvolvido ao CNPq e inclui o desenvolvimento em Computação em Nuvem para monitoramento remoto.</p>
 								<a href="../templates/tg.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -92,7 +92,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/zenith2.png" class="image fit thumb"><img src="../static/images/zenith2.png" alt="" /></a>
 								<h3>Zenith</h3>
-								<p>O Zenith é um programa que apoia a visualização de dados seconectando com qualquer banco de dados (MySQL) e gerantes algumas possíveis visualizações.</p>
+								<p>O Zenith é um programa que apoia a visualização de dados se conectando com qualquer banco de dados (MySQL) e gerando algumas possíveis visualizações.</p>
 								<a href="../templates/zenith.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -108,12 +108,11 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Meus contatos</h2>
-						<p>Você pode entrar em contato comigopor diversos meios e para qualquer objetivo. Estou disponível no:</p>
+						<p>Você pode entrar em contato comigo para qualquer objetivo. Estou disponível no:</p>
 						
 						<center>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/guilhermedonizetti-ads/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<!--<li><a href="#" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>-->
+							<li><a href="https://br.linkedin.com/in/guilhermedonizetti-ads" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/guilhermedonizetti/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						</ul>
 						</center>
