--- a/templates/ia_ocr_python.html
+++ b/templates/ia_ocr_python.html
@@ -10,6 +10,19 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
+
+		<script type="text/javascript">
+			window.$crisp=[];
+			window.CRISP_WEBSITE_ID="b9c20f8e-079b-4535-9448-0b8e5dcf4a20";
+			(function(){
+				d=document;
+				s=d.createElement("script");
+				s.src="https://client.crisp.chat/l.js";
+				s.async=1;
+				d.getElementsByTagName("head")[0].appendChild(s);
+			})
+			();
+		</script>
 	</head>
 	<body class="is-preload">
 
@@ -31,7 +44,7 @@
 						Essa técnica vem sendo desenvolvida há anos e atualmente fazer aplicações nesse segmento está cada vez mais simplificado, como pode ser observado no código do programa.<br>
 						O programa espera uma imagem como entrada e realiza a busca dos caracteres. Após identificar, podemos manipular da forma que quisermos. O programa OCR Python dá uma pequena demonstração de análise de texto com dois objetivos:<br>
 						<li>Encontrar padrão: </li>o programa usa Regex para encontrar padrões de datas e CPFs na imagem. Com isso, qualquer outro padrão poderia ser buscado.
-						<li>Analisar teor das palavras: </li>com base num cojunto de 30 palavras boas e más, o programa busca por essas palavras e calcula quantos por cento do texto da imagem é dessas palavras.<br>
+						<li>Analisar teor das palavras: </li>com base num conjunto de 30 palavras consideradas boas e más, o programa busca por essas palavras e calcula quantos por cento do texto da imagem é dessas palavras.<br>
 						Essas coisas são pequenas demonstrações de automatização de análise de conteúdo e outros.<br><br>
 						<b>Tecnologias usadas: </b>Python, Streamlit e Pytesseract.</p>
 						<br>
