--- a/templates/cnpq_projeto.html
+++ b/templates/cnpq_projeto.html
@@ -10,7 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
-
+		<link rel="shortcut icon" href="../static/images/site_icon.png">
+		
 		<script type="text/javascript">
 			window.$crisp=[];
 			window.CRISP_WEBSITE_ID="b9c20f8e-079b-4535-9448-0b8e5dcf4a20";
