--- a/templates/erro.html
+++ b/templates/erro.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}">
+		<link rel="shortcut icon" href="../static/images/site_icon.png">
 	</head>
 	<body class="is-preload">
 
@@ -28,7 +29,6 @@
 							<h3>Página não encontrada</h3>
 						</header>
 						<p>A página que você está tentando acessar não está disponível.<br><br>
-
 					</section>
 
 							<div class="box alt">
