--- a/templates/ia_rotas_cidades.html
+++ b/templates/ia_rotas_cidades.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}" />
+		<link rel="shortcut icon" href="../static/images/site_icon.png">
 
 		<script type="text/javascript">
 			window.$crisp=[];
