Adequacao de algumas partes dos textos.

--- a/templates/api.html
+++ b/templates/api.html
@@ -42,7 +42,7 @@
 							<h3>API Cidades</h3>
 						</header>
 						<p>A API possui uma função simples de responder às requisições GET para entregar dados de latitude e longitude de cidades do Vale do Paraíba.<br>
-						É possível requisitar cidades individuais ou todas, de qualquer forma o tráfego é muito pequeno por conta do conjunto de cidades existentes serem igual a 39. Por esse motivo, se tornou a API usada pelo <a href="ia_rotas_cidades.html">Rotas Cidades</a> que realiza várias requisições a cada execução.<br><br>
+						É possível requisitar cidades individuais ou todas, de qualquer forma o tráfego é muito pequeno por conta do conjunto de cidades existentes serem igual a 39. Por esse motivo, se tornou a API usada pelo <a href="ia_rotas_cidades.html" class="icon">Rotas Cidades</a> que realiza várias requisições a cada execução.<br><br>
 						<b>Tecnologias usadas: </b>Python, Flask, Postman, RESTful e Heroku.</p>
 						<br>
 						<a href="https://api-valeparaiba.herokuapp.com/">
