--- a/templates/cnpq_projeto.html
+++ b/templates/cnpq_projeto.html
@@ -41,10 +41,10 @@
 						<header class="major">
 							<h3>Ao Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPq)</h3>
 						</header>
-						<p>O projeto de pesquisa foi desenvolvido na bolsa de Iniciação Tecnológica do CNPq, executado pelo Centro Paula Souza.<br>
+						<p>O projeto de pesquisa foi desenvolvido durante a bolsa de Iniciação Tecnológica do CNPq, executado pelo Centro Paula Souza.<br>
 						Consiste em um sistema de Internet das Coisas para monitoramento de temperatura, umidade relativa e presença de pessoas em <i>data centers</i> e ambientes computacionais críticos. O sistema opera em tempo real para atender a criticidade desses ambientes.<br>
 						A operação inicia na captura das variáveis ambientais em campo através de sensores e microcontroladores. Os dados são transmitidos por telemetria, tratados, armazenados e conectados à diferentes formas de visualização de dados. Também, existe um sistema de alerta por e-mail para casos de anomalias.<br>
-						Boa parte do funcionamento acontece entre camada de rede e armazenamento, portanto apenas as ferramentas de visualização de dados são capazes de serem observadas no olho.
+						Boa parte do funcionamento acontece entre camada de aplicação e armazenamento, portanto apenas as ferramentas de visualização de dados são capazes de serem observadas a olho.
 						Com isso, nesse projeto desenvolvi uma ferramenta própria que representa a planta do <i>data center</i> seguindo o padrão ANSI/TIA-942 e exibe as condições térmicas em cada ponto monitorado dentro do ambiente.<br><br>
 						<b>Tecnologias usadas: </b>ESP32, SHT30, Arduíno, MQTT, SMTP, Mosquitto, Python, Node-RED, InfluxDB, Flask, Grafana e Linux.</p>
 					</section>
