--- a/templates/ia_ocr_python.html
+++ b/templates/ia_ocr_python.html
@@ -42,10 +42,10 @@
 							<h3>OCR Python</h3>
 						</header>
 						<p>O programa utiliza da técnica de Optical Character Recognition (OCR), que é uma técnica da Inteligência Artificial para reconhecimento de caracteres em imagens.<br>
-						Essa técnica vem sendo desenvolvida há anos e atualmente fazer aplicações nesse segmento está cada vez mais simplificado, como pode ser observado no código do programa.<br>
+						Essa técnica é desenvolvida há anos e, atualmente, fazer aplicações nesse segmento está cada vez mais simplificado, como pode ser observado no código do programa.<br>
 						O programa espera uma imagem como entrada e realiza a busca dos caracteres. Após identificar, podemos manipular da forma que quisermos. O programa OCR Python dá uma pequena demonstração de análise de texto com dois objetivos:<br>
-						<li>Encontrar padrão: </li>o programa usa Regex para encontrar padrões de datas e CPFs na imagem. Com isso, qualquer outro padrão poderia ser buscado.
-						<li>Analisar teor das palavras: </li>com base num conjunto de 30 palavras consideradas boas e más, o programa busca por essas palavras e calcula quantos por cento do texto da imagem é dessas palavras.<br>
+						<li>Encontrar padrão: </li>o programa usa Regex para encontrar datas e CPFs na imagem. Com isso, qualquer outro padrão poderia ser buscado.
+						<li>Analisar teor das palavras: </li>com base num conjunto de 30 palavras consideradas boas e más, o programa busca por essas palavras e calcula quantos por cento do texto da imagem é formado por elas.<br>
 						Essas coisas são pequenas demonstrações de automatização de análise de conteúdo e outros.<br><br>
 						<b>Tecnologias usadas: </b>Python, Streamlit e Pytesseract.</p>
 						<br>
