--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 					<section id="one">
 						<header class="major">
 							<h3>Olá, sou <b>Guilherme Donizetti</b>!<br />
-							Aqui você poderá me conhecer melhor e o meu trabalho.</h3>
+							Aqui você poderá me conhecer melhor e saber mais do meu trabalho.</h3>
 						</header>
 						<p>Sou graduando do último semestre de Análise e Desenvolvimento de Sistemas na Fatec Cruzeiro, e técnico em Informática pela Etec Cruzeiro. Que tal me conhecer um pouco mais?</p>
 						<ul class="actions">
@@ -57,7 +57,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/grafana.png" class="image fit thumb"><img src="../static/images/grafana.png" alt="" /></a>
-								<h3>IoT para monitoramento de variáveis ambientais em datacenters.</h3>
+								<h3>IoT para monitoramento de variáveis ambientais em <i>data centers</i>.</h3>
 								<p>Projeto desenvolvido para o CNPq, consiste em monitorar temperatura, umidade relativa e presença de pessoas garantindo operação em tempo real através de Internet das Coisas.</p>
 								<a href="../templates/cnpq_projeto.html" class="icon">Saber mais</a>
 							</article>
@@ -74,7 +74,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/Rotas.png" class="image fit thumb"><img src="../static/images/Rotas.png" alt="" /></a>
 								<h3>Rotas Cidades</h3>
-								<p>Métodos de Inteligência Artificialpara encontrar a melhor rota entre uma cidade a outra tendo obrigatoriamente que passar por uma cidade X.</p>
+								<p>Métodos de Inteligência Artificial para encontrar a melhor rota entre uma cidade e outra tendo, obrigatoriamente, que passar por uma cidade X.</p>
 								<a href="../templates/ia_rotas_cidades.html" class="icon">Saber mais</a>
 							</article>
 						</div>
@@ -84,7 +84,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/API.png" class="image fit thumb"><img src="../static/images/API.png" alt="" /></a>
 								<h3>API Vale do Paraíba</h3>
-								<p>A API se concentra na entrega de dados geográficos das cidades do Vale do Paraíba (latitude e longitude), isso permite uma API exclusiva para a região e deixa os dados mais enxutos.</p>
+								<p>A API se concentra na entrega de dados geográficos das cidades do Vale do Paraíba (latitude e longitude), isso permite uma API focada para a região e deixa os dados mais enxutos.</p>
 								<a href="../templates/api.html" class="icon">Saber mais</a>
 							</article>
 						</div>
@@ -94,7 +94,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/dc_monit.png" class="image fit thumb"><img src="../static/images/dc_monit.png" alt="" /></a>
 								<h3>Trabalho de Graduação (em desenvolvimento)</h3>
-								<p>O projeto de TG é baseado nas pesquisas doprojeto desenvolvido ao CNPq e inclui o desenvolvimento em Computação em Nuvem para monitoramento remoto.</p>
+								<p>O projeto de TG é baseado nas pesquisas do projeto desenvolvido ao CNPq e inclui o desenvolvimento em Computação em Nuvem para monitoramento remoto.</p>
 								<a href="../templates/tg.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -106,7 +106,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/zenith2.png" class="image fit thumb"><img src="../static/images/zenith2.png" alt="" /></a>
 								<h3>Zenith</h3>
-								<p>O Zenith é um programa que apoia a visualização de dados seconectando com qualquer banco de dados (MySQL) e gerantes algumas possíveis visualizações.</p>
+								<p>O Zenith é um programa que apoia a visualização de dados se conectando com qualquer banco de dados (MySQL) e gera algumas possíveis visualizações.</p>
 								<a href="../templates/zenith.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -122,7 +122,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Meus contatos</h2>
-						<p>Você pode entrar em contato comigopor diversos meios e para qualquer objetivo. Estou disponível no:</p>
+						<p>Você pode entrar em contato comigo para qualquer objetivo. Estou disponível no:</p>
 						
 						<center>
 						<ul class="icons">
