--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -47,9 +47,10 @@
 						</center>
 
 						<p>Olá,<br>
-						Tenho 21 anos e sou graduando do último semestre de Análise e Desenvolvimento de Sistemas na Faculdade de Tecnologia do Estado de São Paulo, em Cruzeiro.<br>
-						Com 17 anos ingressei no curso técnico de Informática onde tive meu primeiro contato com a Tecnologia da Informação. Crei gosto pelo área e desde então venho estudando e buscando me desenvolver na área.<br>
-						Após o curso eu entrei na faculdade (atual), a cada semestre percebi minha evolução e através das diversas atividades em equipe desenvolvi competência técnicas e humanas.<br><br>
+						Tenho 21 anos, atualmente curso Análise e Desenvolvimento de Sistemas na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).<br>
+						Meu interesse por Tecnologia da Informação começou com 17 anos, quando ingressei no curso técnico em Informática na Etec Cruzeiro, onde eu realmente criei gosto pela área.<br>
+						Meu desenvolvimento é contínuo. A cada atividade em equipe, para mim, é uma oportunidade para aprender novas competências técnicas e humanas. Até das situações mais adversas costumo tirar algum aprendizado.<br>
+						Nas atividades em equipe sempre sou engajado e colaborativo, não hesito em pedir ajuda e em ajudar. Das <i>soft skills</i> mais evidentes em mim, destaco a adaptabilidade, colaboração, responsabilidade e resiliência.<br><br>
 
 						<h1>Cursos que realizei:</h1>
 						<p>Aqui destaco alguns cursos que realizei.</p>
