--- a/templates/index.html
+++ b/templates/index.html
@@ -22,10 +22,24 @@
 				d.getElementsByTagName("head")[0].appendChild(s);
 			})
 			();
+
+			function frases(){
+				lista = [
+					'O insucesso é apenas uma oportunidade para recomeçar com mais inteligência.|Henry Ford',
+					'Acredite que ainda não sorriu tudo e que seu coração ainda vai amar muito; acredite que o melhor da vida ainda vai chegar.|Desconhecido',
+					'O problema não é o problema, o problema é a sua atitude sobre o problema.|Capitão Jack Sparrow'
+				]
+				frase = lista[Math.floor(Math.random() * lista.length)]
+				frase = frase.split("|")
+				document.getElementById(frase).innerHTML = '<p>'+frase[0]+'</p>'
+				document.getElementById(autor).innerHTML = '<p>'+frase[1]+'</p>'
+
+				console.log(`Meu sistema operacional favorito é ${elemento}!`)
+			}
 		</script>
 	</head>
 																																																							
-	<body class="is-preload">
+	<body class="is-preload" onload="frases();">
 
 		<!-- Header -->
 			<header id="header">
@@ -127,12 +141,18 @@
 						<center>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/guilhermedonizetti-ads/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<!--<li><a href="#" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>-->
 							<li><a href="https://github.com/guilhermedonizetti/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						</ul>
 						</center>
 
 						<hr>
+						<br>
+						<center>
+							<blockquote>
+								<div id="frase"></div>
+							</blockquote>
+							<div id="autor"></div>
+						</center>
 
 						<center>
 						<ul class="copyright">
