--- a/templates/index.html
+++ b/templates/index.html
@@ -22,20 +22,6 @@
 				d.getElementsByTagName("head")[0].appendChild(s);
 			})
 			();
-
-			function frases(){
-				lista = [
-					'O insucesso é apenas uma oportunidade para recomeçar com mais inteligência.|Henry Ford',
-					'Acredite que ainda não sorriu tudo e que seu coração ainda vai amar muito; acredite que o melhor da vida ainda vai chegar.|Desconhecido',
-					'O problema não é o problema, o problema é a sua atitude sobre o problema.|Capitão Jack Sparrow'
-				]
-				frase = lista[Math.floor(Math.random() * lista.length)]
-				frase = frase.split("|")
-				document.getElementById(frase).innerHTML = '<p>'+frase[0]+'</p>'
-				document.getElementById(autor).innerHTML = '<p>'+frase[1]+'</p>'
-
-				console.log(`Meu sistema operacional favorito é ${elemento}!`)
-			}
 		</script>
 	</head>
 																																																							
@@ -149,11 +135,13 @@
 						<br>
 						<center>
 							<blockquote>
-								<div id="frase"></div>
+								{{ frase[0] }}
 							</blockquote>
-							<div id="autor"></div>
+							{{ frase[1] }}
 						</center>
 
+						<br>
+						
 						<center>
 						<ul class="copyright">
 							Essa página foi desenvolvida com o apoio de <a href="http://html5up.net">HTML5 UP</a>, que cedeu livremente o belo projeto para ser adaptado por mim, Guilherme!</li>
