Inserindo pessoas que fizeram alguns dos projetos comigo.

--- a/templates/ia_rotas_cidades.html
+++ b/templates/ia_rotas_cidades.html
@@ -48,6 +48,7 @@
 						No caso do programa, o algoritmo recebe uma cidade destino que é um lugar que sofreu algum desastre e precisa de Ajuda Humanitária. Dentre as cidades com pontos de Ajuda Humanitária mais próxima, o programa gera a melhor rota considerando a quantidade de saltos (número de cidades), ou considerando a distância, entre outras formas. A escolha do que considerar fica a critério do usuário.<br>
 						Da mesma forma, após chegar ao local que precisa da ajuda, o programa gera a rota que leva até a cidade que possui um ponto de atendimento hospitalar para esses cenários. Dessa forma o programa é multi objetivo.<br>
 						Para fins de validação do algoritmo, o projeto implementa sobre uma área real que é o Vale do Paraíba, São Paulo-Brasil. Inclui 39 cidades.<br><br>
+						<b>Participação no trabalho: </b><a href="https://github.com/SACRIER" target="_blank">Luiz Fernando Rodrigues</a><br>
 						<b>Tecnologias usadas: </b>Python e Streamlit.</p>
 						<br>
 						<a href="https://share.streamlit.io/guilhermedonizetti/ia_disciplina/index.py">
