--- a/templates/sendex.html
+++ b/templates/sendex.html
@@ -47,6 +47,7 @@
 						<li>O Sendex precisa de internet apenas para entregar o email ao servidor SMTP do Gmail, então opera com baixa qualidade de internet.</li>
 						<li>Mesmo com o programa aberto, ele só realiza login quando um email é enviado e após isso é imediatamente desconectado.</li>
 						<li>O programa é 100% específico na sua atividade de envio de emails.</li><br><br>
+						<b>Participação no trabalho: </b><a href="https://github.com/SACRIER">Luiz Fernando Rodrigues</a>,<a href="#">Vitória Narciso</a> e <a href="#">Zheng Darong.</a><br>
 						<b>Tecnologias usadas: </b>Python, Tkinter e sSMTP.</p>
 
 						<a href="https://github.com/guilhermedonizetti/Sendex">código</a>
