--- a/templates/tg.html
+++ b/templates/tg.html
@@ -46,6 +46,7 @@
 						O que há de diferente no meu Trabalho de Graduação então?<br>
 						O TG propõe a extensão do monitoramento local feito com Internet das Coisas para um monitoramento também remoto através da Computação em Nuvem.<br>
 						As implementações de Cloud até o momento permitem o monitoramento em tempo real e com a mesma clareza que o local. A pesquisa continua em desenvolvimento.<br><br>
+						<b>Participação no trabalho: </b><a href="https://github.com/SACRIER" target="_blank">Luiz Fernando Rodrigues</a><br>
 						<b>Tecnologias usadas: </b>ESP32, SHT30, Arduíno, WiFi, MQTT, SMTP, Mosquitto, Python, Node-RED, InfluxDB, InfluxDB Cloud, IoT Home, AWS IoT Core, Flask, Grafana e Linux.</p>
 					</section>
 
