--- a/templates/zenith.html
+++ b/templates/zenith.html
@@ -47,6 +47,8 @@
 						É possível definir um período de atualização do gráfico, a frequência de atualização deve ser um valor inteiro referente aos segundos.<br>
 						Apesar de ser um programa para lidar diretamente com BDs, o Zenith possui nenhum banco de dados, apenas usou o MySQL para ser modelado e testado simulando BDs de outros usuários.<br><br>
 
+						<b>Participação no trabalho: </b><a href="https://github.com/SACRIER">Luiz Fernando Rodrigues</a> e <a href="#">Pedro Luiz de Oliveira</a>.<br>
+
 						<b>Tecnologias usadas: </b>PHP, MySQL, ChartJS e Google Developer.</p>
 
 						<a href="https://github.com/guilhermedonizetti/Zenith-Fatec">código</a>
