--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -47,8 +47,8 @@
 						</center>
 
 						<p>Olá,<br>
-						Tenho 21 anos, atualmente curso Análise e Desenvolvimento de Sistemas na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).<br>
-						Meu interesse por Tecnologia da Informação começou com 17 anos, quando ingressei no curso técnico em Informática na Etec Cruzeiro, onde eu realmente criei gosto pela área.<br>
+						Tenho 21 anos, atualmente curso Análise e Desenvolvimento de Sistemas na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).
+						Meu interesse por Tecnologia da Informação começou com 17 anos, quando ingressei no curso técnico em Informática na Etec Cruzeiro, onde eu realmente criei gosto pela área.<br><br>
 						Meu desenvolvimento é contínuo. A cada atividade em equipe, para mim, é uma oportunidade para aprender novas competências técnicas e humanas. Até das situações mais adversas costumo tirar algum aprendizado.<br>
 						Nas atividades em equipe sempre sou engajado e colaborativo, não hesito em pedir ajuda e em ajudar. Das <i>soft skills</i> mais evidentes em mim, destaco a adaptabilidade, colaboração, responsabilidade e resiliência.<br><br>
 
