--- a/templates/cnpq_projeto.html
+++ b/templates/cnpq_projeto.html
@@ -54,7 +54,7 @@
 									<div class="col-12"><span class="image fit"><img src="../static/images/cnpq_projeto/imagem1.png" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="../static/images/cnpq_projeto/imagem2.png" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="../static/images/cnpq_projeto/imagem3.png" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="../static/images/cnpq_projeto/imagem4.png" alt="" height="230" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="../static/images/cnpq_projeto/imagem4.png"/></span></div>
 								</div>
 							</div>
 
