--- a/templates/index.html
+++ b/templates/index.html
@@ -11,18 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}">
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
-		<script type="text/javascript">
-			window.$crisp=[];
-			window.CRISP_WEBSITE_ID="b9c20f8e-079b-4535-9448-0b8e5dcf4a20";
-			(function(){
-				d=document;
-				s=d.createElement("script");
-				s.src="https://client.crisp.chat/l.js";
-				s.async=1;
-				d.getElementsByTagName("head")[0].appendChild(s);
-			})
-			();
-		</script>
+		<script src="https://kit.fontawesome.com/3fb0ee1336.js" crossorigin="anonymous" defer></script>
 	</head>
 																																																							
 	<body class="is-preload" onload="frases();">
@@ -152,6 +141,18 @@
 			</div>
 
 		<!-- Scripts -->
+			<script type="text/javascript">
+				window.$crisp=[];
+				window.CRISP_WEBSITE_ID="b9c20f8e-079b-4535-9448-0b8e5dcf4a20";
+				(function(){
+					d=document;
+					s=d.createElement("script");
+					s.src="https://client.crisp.chat/l.js";
+					s.async=1;
+					d.getElementsByTagName("head")[0].appendChild(s);
+				})
+				();
+			</script>
 			<script src="../assets/js/jquery.min.js"></script>
 			<script src="../assets/js/jquery.poptrox.min.js"></script>
 			<script src="../assets/js/browser.min.js"></script>
