--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 			();
 	</script>
 																																																							
-	<body class="is-preload" onload="frases();">
+	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
