Incluindo link para pagina sobre mim.

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/animacao.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='assets/css/carrossel.css') }}">
 		<link rel="shortcut icon" href="../static/images/site_icon.png">
 	</head>
 
@@ -31,7 +33,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="../static/images/Eu.png" alt="" /></a>
+					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/Eu.png" alt="" /></a>
 				</div>
 			</header>
 
@@ -122,7 +124,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three">
+					<section id="four">
 						<h2>Meus contatos</h2>
 						<p>Você pode entrar em contato comigo para qualquer objetivo. Estou disponível no:</p>
 						
