Incluindo o projeto WayPy.

--- a/templates/ia_rotas_cidades.html
+++ b/templates/ia_rotas_cidades.html
@@ -51,11 +51,11 @@
 						<b>Participação no trabalho: </b><a href="https://github.com/SACRIER" target="_blank">Luiz Fernando Rodrigues</a><br>
 						<b>Tecnologias usadas: </b>Python e Streamlit.</p>
 						<br>
-						<a href="https://share.streamlit.io/guilhermedonizetti/ia_disciplina/index.py">
+						<a href="https://share.streamlit.io/guilhermedonizetti/ia_disciplina/index.py" target="_blank">
 							<button class="primary button">Acesse ao programa!</button>
 						</a>
 						&nbsp;&nbsp;
-						<a href="https://github.com/guilhermedonizetti/IA_disciplina">código</a>
+						<a href="https://github.com/guilhermedonizetti/IA_disciplina" target="_blank">código</a>
 
 						<br><br>
 
@@ -63,7 +63,7 @@
 
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
-									<div class="col-12"><span class="image fit"><img src="../static/images/ia_rotas/imagem1.png" alt="" /></span></div><br>
+									<div class="col-12"><span class="image fit"><img src="../static/images/bidirecional.png" alt="" /></span></div><br>
 									<div class="col-12"><span class="image fit"><img src="../static/images/ia_rotas/imagem2.png" alt="" /></span></div>
 								</div>
 							</div>
