--- a/templates/index.html
+++ b/templates/index.html
@@ -76,10 +76,17 @@
 								<a href="../templates/ia_ocr_python.html" class="icon">Saber mais</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="../static/images/Rotas.png" class="image fit thumb"><img src="../static/images/Rotas.png" alt="" /></a>
+								<a href="../static/images/bidirecional.png" class="image fit thumb"><img src="../static/images/bidirecional.png" alt="" /></a>
 								<h3>Rotas Cidades</h3>
 								<p>Métodos de Inteligência Artificial para encontrar a melhor rota entre uma cidade e outra tendo, obrigatoriamente, que passar por uma cidade X.</p>
 								<a href="../templates/ia_rotas_cidades.html" class="icon">Saber mais</a>
+							</article>
+							<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="../static/images/waypy_pypi.png" class="image fit thumb"><img src="../static/images/waypy_pypi.png" alt="" /></a>
+								<h3>WayPy (pacote)</h3>
+								<p>O pacote contém 8 métodos diferentes de buscas em grafo, cada método utiliza um critério diferente e com isso poder obter diferentes resultados.</p>
+								<a href="../templates/pacote_waypy.html" class="icon">Saber mais</a>
 							</article>
 						</div>
 
