--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,13 @@
 			<header id="header">
 				<div class="inner">
 					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/Eu.png" alt="" /></a>
+					<br>
+					<a href="https://github.com/guilhermedonizetti" target="_blank">
+						<img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" />
+					</a>
+					<a href="https://br.linkedin.com/in/guilhermedonizetti-ads" target="_blank">
+						<img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" />
+					</a>
 				</div>
 			</header>
 
