--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/Eu.png" alt="" /></a>
+					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/eu_1.png" alt="" /></a>
 					<br>
 					<a href="https://github.com/guilhermedonizetti" target="_blank" class="icon">
 						<img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" />
