--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -43,14 +43,15 @@
 						</header>
 
 						<center>
-							<img src="../static/images/Eu.png" width="150" height="150">
+							<img src="../static/images/{{ foto }}.png" width="150" height="150">
 						</center>
 
-						<p>Olá,<br>
-						Tenho 21 anos, atualmente curso Análise e Desenvolvimento de Sistemas na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).
+						<center>
+						Olá, tenho 21 anos, atualmente curso Análise e Desenvolvimento de Sistemas na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).
 						Meu interesse por Tecnologia da Informação começou com 17 anos, quando ingressei no curso técnico em Informática na Etec Cruzeiro, onde eu realmente criei gosto pela área.<br><br>
 						Meu desenvolvimento é contínuo. A cada atividade em equipe, para mim, é uma oportunidade para aprender novas competências técnicas e humanas. Até das situações mais adversas costumo tirar algum aprendizado.<br>
 						Nas atividades em equipe sempre sou engajado e colaborativo, não hesito em pedir ajuda e em ajudar. Das <i>soft skills</i> mais evidentes em mim, destaco a adaptabilidade, colaboração, responsabilidade e resiliência.<br><br>
+						</center>
 
 						<h1>Cursos que realizei:</h1>
 						<p>Aqui destaco alguns cursos que realizei.</p>
@@ -130,7 +131,14 @@
 						<div class="box alt">
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-4">
-									<label>Duração: 1 ano.<br>
+									<label>Duração: Dez/2021 - presente.<br>
+									Mais Top Estética - maior franquia de estética da América.</label>
+									<span class="image fit" onclick="verDados();">
+										<img src="../static/images/imagem1.png" alt="" />
+									</span>
+								</div>
+								<div class="col-4">
+									<label>Duração: 1 ano (Set/2020 - Set/2021).<br>
 									Conselho Nacional de Desenvolvimento Científico e Tecnológico.</label>
 									<span class="image fit">
 											<img src="../static/images/cursos/cnpq.jpg" alt="" />
@@ -138,8 +146,13 @@
 								</div>
 							</div>
 						</div>
-
 			</div>
+
+			<script type="text/javascript">
+				function verDados(){
+					alert("<img src='https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Fmaistopesteticacruzeiro%2F&psig=AOvVaw1nedXLymG3DHvtdaM2WU7w&ust=1639005721164000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCOChoevp0vQCFQAAAAAdAAAAABAY'>");
+				}
+			</script>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
