Removendo funcao JS.

--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -133,7 +133,7 @@
 								<div class="col-4">
 									<label>Duração: Dez/2021 - presente.<br>
 									Mais Top Estética - maior franquia de estética da América.</label>
-									<span class="image fit" onclick="verDados();">
+									<span class="image fit">
 										<img src="../static/images/imagem1.png" alt="" />
 									</span>
 								</div>
@@ -147,12 +147,6 @@
 							</div>
 						</div>
 			</div>
-
-			<script type="text/javascript">
-				function verDados(){
-					alert("<img src='https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Fmaistopesteticacruzeiro%2F&psig=AOvVaw1nedXLymG3DHvtdaM2WU7w&ust=1639005721164000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCOChoevp0vQCFQAAAAAdAAAAABAY'>");
-				}
-			</script>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
