--- a/templates/pessoal.html
+++ b/templates/pessoal.html
@@ -131,14 +131,14 @@
 						<div class="box alt">
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-4">
-									<label>Duração: Dez/2021 - presente.<br>
+									<label>Duração: {{ tempo }}. (Dez/2021 - em andamento). Posição: PROGRAMADOR JÚNIOR.<br>
 									Mais Top Estética - maior franquia de estética da América.</label>
 									<span class="image fit">
 										<img src="../static/images/imagem1.png" alt="" />
 									</span>
 								</div>
 								<div class="col-4">
-									<label>Duração: 1 ano (Set/2020 - Set/2021).<br>
+									<label>Duração: 1 ano (Set/2020 - Set/2021). Posição: BOLSISTA.<br>
 									Conselho Nacional de Desenvolvimento Científico e Tecnológico.</label>
 									<span class="image fit">
 											<img src="../static/images/cursos/cnpq.jpg" alt="" />
