Incluindo e alterando imagem pessoal, atualizando a pagina de TG.

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/eu_1.png" alt="" /></a>
+					<a href="../templates/pessoal.html" class="image avatar"><img src="../static/images/eu_2.png" alt="" /></a>
 					<br>
 					<a href="https://github.com/guilhermedonizetti" target="_blank" class="icon">
 						<img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" />
@@ -138,6 +138,26 @@
 					</section>
 
 				<!-- Three -->
+					<section id="three">
+						<h1>PUBLICAÇÕES</h1>
+						
+						<h2>Postagens de conteúdos em outros lugares</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://guilhermedonizettiads.medium.com/" class="image fit thumb" target="_blank"><img src="../static/images/publicacoes/gui_medium.png" alt="" /></a>
+								<h3>Medium - Guilherme Donizetti</h3>
+								<p>Postagens relacionadas à tecnologias que conheço e desejo explicar para que outras pessoas também possam conhecer. Também, uma forma de fixar meus conhecimentos.</p>
+								<a href="https://guilhermedonizettiads.medium.com/" class="icon" target="_blank">Visitar perfil</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="../static/images/publicacoes/gui_tg.png" class="image fit thumb"><img src="../static/images/publicacoes/gui_tg.png" alt="" /></a>
+								<h3>Artigo Científico do meu TG</h3>
+								<p>O artigo científico é do meu trabalho de graduação, contém os materias utilizados e como foram aplicados no desenvolvimento, conta com a fundamentação teórica.</p>
+								<a href="../templates/ia_rotas_cidades.html" class="icon">Saber mais</a>
+							</article>
+					</section>
+
+
 					<section id="four">
 						<h2>Meus contatos</h2>
 						<p>Você pode entrar em contato comigo para qualquer objetivo. Estou disponível no:</p>
