--- a/templates/tg.html
+++ b/templates/tg.html
@@ -41,11 +41,11 @@
 						<header class="major">
 							<h3>Trabalho de Graduação</h3>
 						</header>
-						<p>O projeto é o trabalho final a ser entregue na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).<br>
+						<p>O projeto é o trabalho final entregue na Faculdade de Tecnologia do Estado de São Paulo (em Cruzeiro).<br>
 						O trabalho é um sistema de monitoramento de variáveis ambientais para <i>data centers</i>, semelhante ao <a href="cnpq_projeto.html">projeto do CNPq</a>, porque na verdade o projeto entregue ao CNPq é a base deste.<br>
 						O que há de diferente no meu Trabalho de Graduação então?<br>
-						O TG propõe a extensão do monitoramento local feito com Internet das Coisas para um monitoramento também remoto através da Computação em Nuvem.<br>
-						As implementações de Cloud até o momento permitem o monitoramento em tempo real e com a mesma clareza que o local. A pesquisa continua em desenvolvimento.<br><br>
+						O TG propôs a extensão do monitoramento local feito com Internet das Coisas para um monitoramento também remoto através da Computação em Nuvem.<br>
+						Através das ferramentas utilizadas foi possível o monitoramento também remoto em tempo real e com a mesma clareza que o local. O trabalho foi aprovado com nota 10 pela banca examinadora.<br><br>
 						<b>Participação no trabalho: </b><a href="https://github.com/SACRIER" target="_blank">Luiz Fernando Rodrigues</a><br>
 						<b>Tecnologias usadas: </b>ESP32, SHT30, Arduíno, WiFi, MQTT, SMTP, Mosquitto, Python, Node-RED, InfluxDB, InfluxDB Cloud, IoT Home, AWS IoT Core, Flask, Grafana e Linux.</p>
 					</section>
