Incluindo area para amostra de publicacoes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,7 @@
 								<a href="../static/images/publicacoes/gui_tg.png" class="image fit thumb"><img src="../static/images/publicacoes/gui_tg.png" alt="" /></a>
 								<h3>Artigo Científico do meu TG</h3>
 								<p>O artigo científico é do meu trabalho de graduação, contém os materias utilizados e como foram aplicados no desenvolvimento, conta com a fundamentação teórica.</p>
-								<a href="../templates/ia_rotas_cidades.html" class="icon">Saber mais</a>
+								<a href="../templates/artigo_tg.html" class="icon">Saber mais</a>
 							</article>
 					</section>
 
