Correcao do texto na pagina inicial.

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 							<h1>Olá, sou <b>Guilherme Donizetti</b>!</h1>
 							<h3>Aqui você poderá me conhecer melhor e saber mais do meu trabalho.</h3>
 						</header>
-						<p>Sou graduando do último semestre de Análise e Desenvolvimento de Sistemas na Fatec Cruzeiro, e técnico em Informática pela Etec Cruzeiro. Que tal me conhecer um pouco mais?</p>
+						<p>Sou formado em Análise e Desenvolvimento de Sistemas na Fatec Cruzeiro, e técnico em Informática e atualmente programador júnior na maior franquia de estética e emagrecimento do país. Que tal me conhecer um pouco mais?</p>
 
 						<ul class="actions">
 							<li><a href="../templates/pessoal.html" class="button">Ver mais</a></li>
